# SproutEngine

./: .gitignore  CMakeLists.txt  Project1.vcxproj  Project1.vcxproj.filters  README.md  imgui.ini  tests.cpp
data/shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl
glad/: glad.c
includes/imgui/: ImGuiFileDialog.h
includes/sprout_engine/: PBRMaterial.cpp  PBRMaterial.h  SproutApp.cpp  SproutApp.h  bounds.cpp  bounds.h  buffer.cpp  buffer.h  camera.cpp  camera.h  color.h  computeShader.cpp  computeShader.h  cubemap.h  cubemapHDRI.h  entity.cpp  entity.h  icamera.h  image.h  inspectable.cpp  inspectable.h  interval.h  light.h  line.cpp  line.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  orbiter.cpp  orbiter.h  resourcesManager.cpp  resourcesManager.h  shader.h  skybox.cpp  skybox.h  texture.h  transform.h  (+4 more)
includes/sprout_engine/passes/: ChromaticAberrationPass.cpp  ChromaticAberrationPass.h  ColorPass.h  bloomPass.cpp  bloomPass.h  colorPass.cpp  depthPass.cpp  depthPass.h  depthPrePass.cpp  depthPrePass.h  drawPass.h  filmGrainPass.cpp  filmGrainPass.h  forwardPass.cpp  forwardPass.h  pass.h  postProcessPass.h  shadowmappingPass.cpp  shadowmappingPass.h  terrainForwardPass.cpp  terrainForwardPass.h  tonemappingPass.cpp  tonemappingPass.h
includes/sprout_engine/passes/PostProcessing/: ChromaticAberrationPass.h  bloomPass.h  distanceFogPass.cpp  distanceFogPass.h  filmGrainPass.cpp  postProcessPass.h
includes/sprout_engine/physics/: joints.h  physicsEntity.cpp  physicsEntity.h  physicsSolver.cpp  physicsSolver.h  rigidbody.cpp  rigidbody.h  springJoint.cpp  springJoint.h
includes/sprout_engine/ray_utils/: bvh.cpp  bvh.h  bvhLeaf.cpp  bvhLeaf.h  bvhNode.cpp  bvhNode.h  gpuMeshReader.cpp  gpuMeshReader.h  ray.cpp  ray.h  traceableManager.cpp  traceableManager.h
includes/sprout_engine/ray_utils/RayTracingMaterials/: dielectrics.cpp  dielectrics.h  lambertian.cpp  lambertian.h  metallic.cpp  metallic.h  raytracingMaterial.cpp  raytracingMaterial.h
includes/sprout_engine/ray_utils/Traceables/: box.cpp  box.h  sphere.cpp  sphere.h  traceable.h  triangle.cpp  triangle.h
shaders/General/: shadowmapping.fs  shadowmapping.vs  skybox.fs
shaders/PBR/: BRDFIntegration.fs  PBR.fs  PBR.vs  cubemapConvolution.fs  equirectangularToCubemap.fs  prefilterIBL.fs
shaders/Post Process/: bloom.fs  brightPass.fs  chromaticAberration.fs  distance_fog.fs  distance_fog.vs  fake_skybox.fs  fake_skybox.vs  filmGrain.fs  gaussianBlur.fs  tonemapping.fs  tonemapping.vs
shaders/Terrain/: terrain.fs  terrain.vs
sprout_engine/: SproutApp.cpp  SproutApp.h  bounds.cpp  bounds.h  camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  window.cpp  window.h
src/PBR/: BRDFIntegration.vs  PBR.cpp  PBR.fs  PBR.vs  debug_lines.vs  default.fs  default.vs  equirectangularToCubemap.vs  postprocess.fs  prefilterIBL.fs  skybox.vs  tonemapping.fs
src/editor/: SproutEngineEditor.cpp
src/framebuffers/: debug_lines.fs  default.fs  default.vs  framebuffers.cpp  plain_color.fs  postprocess.vs  shadowmapping.fs  shadowmapping.vs  skybox.fs  skybox.vs
src/physics/: debug_lines.fs  default.fs  default.vs  main.cpp
src/raytracer/: debug_lines.fs  default.fs  default.vs  main.cpp  raytrace.comp  raytrace.cs  raytraceDiffuse.cs  texture.fs  texture.vs
src/tests/: debug_lines.vs  default.fs  tests.cpp
tests/: TestBox.cpp  TestBox.h  TestImage.cpp  TestImage.h  TestInterval.cpp  TestInterval.h
